--- a/pages/main.html
+++ b/pages/main.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <h1>Hello!</h1>
-    <h2<Welcome to my website!</h2>
+    <h2>Welcome to my website!</h2>
   </body>
 </html>
