--- a/pages/main.html
+++ b/pages/main.html
@@ -2,6 +2,7 @@
   <head>
     <title>Welcome!</title>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
+    <link rel="stylesheet" href="../CSS/main.css">
     <style>
       body {
         font-family: 'Baloo 2';font-size: 22px;
@@ -9,7 +10,44 @@
     </style>
   </head>
   <body>
-    <h1>Hello!</h1>
-    <h2>Welcome to my website!</h2>
+    <div style="text-align: center;">
+      <h1>Hello!</h1>
+      <h2>Welcome to my website!</h2>
+    </div>
+    <div class="columns">
+  <ul class="price">
+    <li class="header">Basic</li>
+    <li class="grey">$ 1.99 / year</li>
+    <li>10GB Storage</li>
+    <li>10 Emails</li>
+    <li>10 Domains</li>
+    <li>1GB Bandwidth</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+
+<div class="columns">
+  <ul class="price">
+    <li class="header" style="background-color:#04AA6D">Pro</li>
+    <li class="grey">$ 9.99 / year</li>
+    <li>25GB Storage</li>
+    <li>25 Emails</li>
+    <li>25 Domains</li>
+    <li>2GB Bandwidth</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
+    
+<div class="columns">
+  <ul class="price">
+    <li class="header">Premium</li>
+    <li class="grey">$ 29.99 / year</li>
+    <li>50GB Storage</li>
+    <li>50 Emails</li>
+    <li>50 Domains</li>
+    <li>5GB Bandwidth</li>
+    <li class="grey"><a href="#" class="button">Sign Up</a></li>
+  </ul>
+</div>
   </body>
 </html>
