--- a/pages/main.html
+++ b/pages/main.html
@@ -28,7 +28,7 @@
 
 <div class="columns">
   <ul class="price">
-    <li class="header" style="background-color:#04AA6D">Pro</li>
+    <li class="header" style="background-color:gold">Pro</li>
     <li class="grey">$ 9.99 / year</li>
     <li>25GB Storage</li>
     <li>25 Emails</li>
@@ -40,7 +40,7 @@
     
 <div class="columns">
   <ul class="price">
-    <li class="header">Premium</li>
+    <li class="header" style="background-color: lightblue">Premium</li>
     <li class="grey">$ 29.99 / year</li>
     <li>50GB Storage</li>
     <li>50 Emails</li>
