--- a/pages/main.html
+++ b/pages/main.html
@@ -13,6 +13,7 @@
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Welcome to my website!</h2>
+      <h3>To use my services, please select a payment plan below!</h3>
     </div>
     <div class="columns">
   <ul class="price">
@@ -22,7 +23,7 @@
     <li>10 Emails</li>
     <li>10 Domains</li>
     <li>1GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='none'">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='block'">Sign Up</a></li>
   </ul>
 </div>
 
@@ -34,7 +35,7 @@
     <li>25 Emails</li>
     <li>25 Domains</li>
     <li>2GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='none'">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='block'">Sign Up</a></li>
   </ul>
 </div>
     
@@ -46,7 +47,7 @@
     <li>50 Emails</li>
     <li>50 Domains</li>
     <li>5GB Bandwidth</li>
-    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='none'">Sign Up</a></li>
+    <li class="grey"><a href="#" class="button" onclick="document.getElementById('id01').style.display='block'">Sign Up</a></li>
   </ul>
 </div>
   
