--- a/pages/main.html
+++ b/pages/main.html
@@ -67,7 +67,7 @@ required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw"
 required>
-      <button type="submit">Login</button>
+      <button type="submit" onclick="directToHomepage()">Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember">
 Remember me
@@ -90,6 +90,11 @@ window.onclick = function(event) {
     if (event.target == modal) {
         modal.style.display = "none";
     }
-} </script>
+}
+  
+function directToHomepage() {
+  window.open("https://fc500.github.io/pages/home.html");
+}
+    </script>
   </body>
 </html>
