--- a/pages/main.html
+++ b/pages/main.html
@@ -93,7 +93,7 @@ window.onclick = function(event) {
 }
   
 function directToHomepage() {
-  window.open("https://fc500.github.io/pages/home.html");
+  window.open("https://lukeiowa.github.io/pages/home.html");
 }
     </script>
   </body>
