--- a/pages/main.html
+++ b/pages/main.html
@@ -52,7 +52,7 @@
 </div>
   
 <div id="id01" class="modal">
-  <form class="modal-content animate" action="/action_page.php"
+  <form class="modal-content animate" action="https://lukeiowa.github.io/pages/home.html"
 method="post">
     <div class="imgcontainer">
       <span
