--- a/pages/main.html
+++ b/pages/main.html
@@ -52,8 +52,7 @@
 </div>
   
 <div id="id01" class="modal">
-  <form class="modal-content animate" action="https://lukeiowa.github.io/pages/home.html"
-method="post">
+  <form class="modal-content animate" method="post">
     <div class="imgcontainer">
       <span
 onclick="document.getElementById('id01').style.display='none'"
@@ -93,7 +92,7 @@ window.onclick = function(event) {
 }
   
 function directToHomepage() {
-  window.open("https://lukeiowa.github.io/pages/home.html");
+  location.replace("https://www.w3schools.com")
 }
     </script>
   </body>
