--- a/pages/main.html
+++ b/pages/main.html
@@ -92,7 +92,7 @@ window.onclick = function(event) {
 }
   
 function directToHomepage() {
-  location.replace("https://www.w3schools.com")
+  location.replace("https://www.w3schools.com");
 }
     </script>
   </body>
