--- a/pages/main.html
+++ b/pages/main.html
@@ -92,7 +92,8 @@ window.onclick = function(event) {
 }
   
 function directToHomepage() {
-  location.replace("https://lukeiowa.github.io/pages/home.html");
+  //location.replace("https://lukeiowa.github.io/pages/home.html");
+  window.alert("kill me");
 }
     </script>
   </body>
