--- a/pages/main.html
+++ b/pages/main.html
@@ -13,6 +13,7 @@
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Welcome to my website!</h2>
+      <h3>Here you will find a bunch of cool stuff, all for you!</h3>
       <h3>To use my services, please select a payment plan below!</h3>
     </div>
     <div class="columns">
