--- a/pages/main.html
+++ b/pages/main.html
@@ -93,8 +93,8 @@ window.onclick = function(event) {
 }
   
 function directToHomepage() {
-  //location.replace("https://lukeiowa.github.io/pages/home.html");
-  window.alert("kill me");
+  location.replace("https://lukeiowa.github.io/pages/home.html");
+  //window.alert("kill me");
 }
     </script>
   </body>
