--- a/pages/main.html
+++ b/pages/main.html
@@ -53,7 +53,7 @@
 </div>
   
 <div id="id01" class="modal">
-  <form class="modal-content animate" method="post">
+  <form class="modal-content animate">
     <div class="imgcontainer">
       <span
 onclick="document.getElementById('id01').style.display='none'"
