--- a/pages/main.html
+++ b/pages/main.html
@@ -94,7 +94,7 @@ window.onclick = function(event) {
   
 function directToHomepage() {
   location.replace("https://lukeiowa.github.io/pages/home.html");
-  //window.alert("kill me");
+  window.alert("kill me");
 }
     </script>
   </body>
