--- a/pages/main.html
+++ b/pages/main.html
@@ -95,6 +95,14 @@ window.onclick = function(event) {
 function directToHomepage() {
   location.replace("https://lukeiowa.github.io/pages/home.html");
   window.alert("kill me");
+  display();
+}
+
+function display() {
+  DispWin = window.open('','NewWin', 'toolbar=no,status=no,width=300,height=200')
+  message = "<ul><li><b>USERNAME: </b>" + document.login.uname.value;
+  message += "<li><b>PASSWORD: </b>" + document.login.psw.value + "</ul>";
+  DispWin.document.write(message);
 }
     </script>
   </body>
