--- a/pages/start.html
+++ b/pages/start.html
@@ -67,7 +67,7 @@ required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw"
 required>
-      <button type="submit" onclick="directToHomepage()">Login</button>
+      <button type="submit" onclick="directToHomepage()">Signup / Login</button>
       <label>
         <input type="checkbox" checked="checked" name="remember">
 Remember me
@@ -82,28 +82,5 @@ class="cancelbtn">Cancel</button>
  </form>
 
 </div>
-<script>
-// Get the modal
-var modal = document.getElementById('id01');
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-  
-function directToHomepage() {
-  location.replace("https://lukeiowa.github.io/pages/home.html");
-  window.alert("kill me");
-  display();
-}
-
-function display() {
-  DispWin = window.open('','NewWin', 'toolbar=no,status=no,width=300,height=200')
-  message = "<ul><li><b>USERNAME: </b>" + document.login.uname.value;
-  message += "<li><b>PASSWORD: </b>" + document.login.psw.value + "</ul>";
-  DispWin.document.write(message);
-}
-    </script>
   </body>
 </html>
