--- a/pages/start.html
+++ b/pages/start.html
@@ -67,7 +67,7 @@ required>
       <label for="psw"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="psw"
 required>
-      <button type="submit" onclick="directToHomepage()">Signup / Login</button>
+      <button type="submit" onclick="directToHomepage()">Signup</button>
       <label>
         <input type="checkbox" checked="checked" name="remember">
 Remember me
