--- a/pages/start.html
+++ b/pages/start.html
@@ -53,7 +53,7 @@
 </div>
   
 <div id="id01" class="modal">
-  <form class="modal-content animate">
+  <div class="modal-content animate">
     <div class="imgcontainer">
       <span
 onclick="document.getElementById('id01').style.display='none'"
@@ -79,7 +79,7 @@ onclick="document.getElementById('id01').style.display='none'"
 class="cancelbtn">Cancel</button>
       <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
- </form>
+ </div>
 
 </div>
   </body>
