--- a/pages/start.html
+++ b/pages/start.html
@@ -43,7 +43,7 @@
 <div class="columns">
   <ul class="price">
     <li class="header" style="background-color: lightblue">Premium</li>
-    <li class="grey">$ 29.99 / year</li>
+    <li class="grey">$ 19.99 / year</li>
     <li>50GB Storage</li>
     <li>50 Emails</li>
     <li>50 Domains</li>
@@ -82,5 +82,6 @@ class="cancelbtn">Cancel</button>
  </div>
 
 </div>
+<script src="../JS/leaderstartboards.js"></script>
   </body>
 </html>
