--- a/pages/start.html
+++ b/pages/start.html
@@ -82,6 +82,6 @@ class="cancelbtn">Cancel</button>
  </div>
 
 </div>
-<script src="../JS/leaderstartboards.js"></script>
+<script src="../JS/start.js"></script>
   </body>
 </html>
