--- a/pages/start.html
+++ b/pages/start.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <script src="../JS/start.js"></script>
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Welcome to my website!</h2>
