--- a/pages/start.html
+++ b/pages/start.html
@@ -8,14 +8,16 @@
         font-family: 'Baloo 2';font-size: 22px;
       }
     </style>
+    <script type="text/javascript" src="../JS/start.js"></script>
   </head>
   <body>
-    <script src="../JS/start.js"></script>
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Welcome to my website!</h2>
       <h3>Here you will find a bunch of cool stuff, all for you! I hope you enjoy!</h3>
       <h3>To use my services, please select a payment plan below!</h3>
+      <h5>NOTE</h5>
+      <h5>Do not put personal info into the boxes lol, this system is not secure</h5>
     </div>
     <div class="columns">
   <ul class="price">
@@ -83,6 +85,5 @@ class="cancelbtn">Cancel</button>
  </div>
 
 </div>
-<script src="../JS/start.js"></script>
   </body>
 </html>
