--- a/pages/start.html
+++ b/pages/start.html
@@ -18,6 +18,7 @@
       <h3>To use my services, please select a payment plan below!</h3>
       <h5>NOTE</h5>
       <h5>Do not put personal info into the boxes lol, this system is not secure</h5>
+      <button onclick="alerts()">Help</button>
     </div>
     <div class="columns">
   <ul class="price">
