--- a/pages/start.html
+++ b/pages/start.html
@@ -57,34 +57,32 @@
 </div>
   
 <div id="id01" class="modal">
-  <div class="modal-content animate">
+  <div class="modal-content animate" name="login">
     <div class="imgcontainer">
       <span
 onclick="document.getElementById('id01').style.display='none'"
 class="close" title="Close Modal">&times;</span>
-      <!-- <img src="img_avatar2.png" alt="Avatar" class="avatar"> -->
-    </div>
+</div>
     <div class="container">
       <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname"
+      <input type="text" placeholder="Enter Username" id="uname"
 required>
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw"
+      <input type="password" placeholder="Enter Password" id="psw"
 required>
       <button type="submit" onclick="setUserInfo()">Login</button>
       <label>
-        <input type="checkbox" checked="checked" name="remember">
-Remember me
+        <input type="checkbox" id="remember"> Remember me
       </label>
-    </div>
+</div>
     <div class="container" style="background-color:#f1f1f1">
       <button type="button"
 onclick="document.getElementById('id01').style.display='none'"
 class="cancelbtn">Cancel</button>
-      <span class="psw">Forgot <a href="#">password?</a></span>
+      <span class="psw" onclick="forgotPassword()">Forgot <a
+href="#">password?</a></span>
     </div>
- </div>
-
+  </div>
 </div>
   </body>
 </html>
