--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
   <head>
     <title>Welcome!</title>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="../JS/home.css">
     <style>
       body {
         font-family: 'Baloo 2';font-size: 22px;
