--- a/pages/home.html
+++ b/pages/home.html
@@ -3,6 +3,7 @@
     <title>Welcome!</title>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
     <link rel="stylesheet" href="../JS/home.css">
+    <script type="text/javascript" src="../JS/home.js"></script>
     <style>
       body {
         font-family: 'Baloo 2';font-size: 22px;
