--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
   <head>
     <title>Welcome!</title>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
-    <link rel="stylesheet" href="../JS/home.css">
+    <link rel="stylesheet" href="../CSS/home.css">
     <script type="text/javascript" src="../JS/home.js"></script>
     <style>
       body {
