--- a/pages/home.html
+++ b/pages/home.html
@@ -11,6 +11,10 @@
     </style>
   </head>
   <body>
+  <div class="navbar2">
+  <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776; open</span>
+  </div>
+  <div class="main2">
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Thank you for logging in!</h2>
@@ -20,11 +24,9 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">About</a>
   <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="#">Creation</a>
+  <a href="#">Misc</a>
+  </div>
 </div>
-<h2>Animated Sidenav Example</h2>
-<p>Click on the element below to open the side navigation menu.</p>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
   </body>
 </html>
