--- a/pages/home.html
+++ b/pages/home.html
@@ -14,12 +14,19 @@
   <div class="navbar2">
   <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776; Navigation</span>
   </div>
-  <div class="main2">
+    <div class="hero-image">
+  <div class="hero-text">
+    <h1>Hello!</h1>
+    <p>Welcome to my website!</p>
+    <button>About</button>
+  </div>
+</div>
+   <div class="main2"> <!--
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Thank you for your purchase!</h2>
-      <h3>I hope you enjoy my website!</h3>
-    </div>
+      <h3>I hope you enjoy my website!</h3> 
+    </div> -->
     </br>
     </br>
   <h2>About</h2>
