--- a/pages/home.html
+++ b/pages/home.html
@@ -14,14 +14,15 @@
   <div class="navbar2">
   <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776; Navigation</span>
   </div>
+    <div class="main2"> 
     <div class="hero-image">
   <div class="hero-text">
     <h1>Hello!</h1>
     <p>Welcome to my website!</p>
-    <button>About</button>
+    <button>About me!</button>
   </div>
 </div>
-   <div class="main2"> <!--
+  <!--
     <div style="text-align: center;">
       <h1>Hello!</h1>
       <h2>Thank you for your purchase!</h2>
