--- a/pages/home.html
+++ b/pages/home.html
@@ -21,7 +21,7 @@
   </div>
     
   <div class="navbar2">
-  <span style="font-size:30px;cursor:pointer; color: white; z-index: 2;" onclick="openNav()">&#9776; Navigation</span>
+  <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776; Navigation</span>
   </div>
     <div class="hero-image">
   <div class="hero-text">
