--- a/pages/home.html
+++ b/pages/home.html
@@ -39,6 +39,11 @@
     </div> -->
     </br>
     </br>
+  <div class="clearfix">
+  <h2>About</h2>
+  <img class="img1" src="https://specials-images.forbesimg.com/imageserve/5f302109ffad89f9130e07db/960x0.jpg?cropX1=0&cropX2=4800&cropY1=243&cropY2=2943" alt="code" width="130" height="130">
+  <p>This is a website I've made in an attempt to gain more experience at programming.</br>I've made several in the past for several other clients, but this is my first big project!</p>
+</div>
   <h2>About</h2>
   <h4>This is a website I've made in an attempt to gain more experience at programming.</br>I've made several in the past for several other clients, but this is my first big project!</h4>
     
