--- a/pages/home.html
+++ b/pages/home.html
@@ -12,7 +12,7 @@
   </head>
   <body>
         
-    <div id="mySidenav" class="sidenav">
+    <div id="mySidenav" class="sidenav" style="z-layer: 3;">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="#">About</a>
   <a href="#">Services</a>
