--- a/game.html
+++ b/game.html
@@ -63,7 +63,7 @@
         codeUrl: buildUrl + "/Game Ver 1.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "FcStudios",
-        productName: "Test lol",
+        productName: "Battle for the Dashlands",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
