--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Test lol</div>
+        <div id="unity-build-title">Battle for the Dashlands</div>
       </div>
     </div>
     <script>
