--- a/game.html
+++ b/game.html
@@ -18,9 +18,9 @@
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
+       <!-- <div id="unity-webgl-logo"></div> -->
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Battle for the Dashlands</div>
+       <!-- <div id="unity-build-title">Battle for the Dashlands</div> -->
       </div>
     </div>
     <script>
