--- a/game.html
+++ b/game.html
@@ -6,8 +6,23 @@
     <title>Battle for the Dashlands!</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="stylesheet" href="../CSS/game.css">
+    <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
+    <style>
+      body {
+        font-family: 'Baloo 2';font-size: 22px;
+      }
+    </style>
   </head>
   <body>
+    
+  <div class="hero-image">
+    <div class="hero-text">
+    <h1>Battle for the Dashlands!</h1>
+    <p>A random game about saving the world!</p>
+    </div>
+  </div>
+    
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
