--- a/game.html
+++ b/game.html
@@ -22,7 +22,11 @@
     <p>A random game about saving the world!</p>
     </div>
   </div>
-    
+    </br>
+    </br>
+  </br>
+  </br>
+<h2>The Game</h2>
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
@@ -38,6 +42,11 @@
        <!-- <div id="unity-build-title">Battle for the Dashlands</div> -->
       </div>
     </div>
+<h2>Changelog!</h2>
+<h3>Update 1.0.0</h3>
+<ul>
+  <li>Added the game</li>
+</ul>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
