--- a/game.html
+++ b/game.html
@@ -16,12 +16,12 @@
   </head>
   <body>
     
-  <div class="hero-image">
+ <!-- <div class="hero-image">
     <div class="hero-text">
     <h1>Battle for the Dashlands!</h1>
     <p>A random game about saving the world!</p>
     </div>
-  </div>
+  </div> -->
 
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
