--- a/game.html
+++ b/game.html
@@ -15,13 +15,6 @@
     </style>
   </head>
   <body>
-    
- <!-- <div class="hero-image">
-    <div class="hero-text">
-    <h1>Battle for the Dashlands!</h1>
-    <p>A random game about saving the world!</p>
-    </div>
-  </div> -->
 
     <div id="unity-container" class="unity-desktop">
       <canvas id="unity-canvas" width=960 height=600></canvas>
@@ -35,16 +28,7 @@
       <div id="unity-footer">
        <!-- <div id="unity-webgl-logo"></div> -->
         <div id="unity-fullscreen-button"></div>
-       <!-- <div id="unity-build-title">Battle for the Dashlands</div> -->
-      </div>
-    </br>
-  </br>
-  </br>
-<h2>Changelog!</h2>
-<h3>Update 1.0.0</h3>
-<ul>
-  <li>Added the game</li>
-</ul>
+       <!-- <div id="unity-build-title">Battle for the Dashlands</div> --
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
