--- a/game.html
+++ b/game.html
@@ -28,7 +28,8 @@
       <div id="unity-footer">
        <!-- <div id="unity-webgl-logo"></div> -->
         <div id="unity-fullscreen-button"></div>
-       <!-- <div id="unity-build-title">Battle for the Dashlands</div> --
+       <!-- <div id="unity-build-title">Battle for the Dashlands</div> -->
+      </div>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
