--- a/game.html
+++ b/game.html
@@ -12,6 +12,9 @@
       body {
         font-family: 'Baloo 2';font-size: 22px;
       }
+      html {
+      background-color: black;
+      }
     </style>
   </head>
   <body>
