--- a/game.html
+++ b/game.html
@@ -23,9 +23,9 @@
       <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <!--<div id="unity-logo"></div>-->
-        <div id="unity-progress-bar-empty">
+        <!--<div id="unity-progress-bar-empty">-->
           <div id="unity-progress-bar-full"></div>
-        </div>
+       <!-- </div>-->
       </div>
       <div id="unity-warning"> </div>
       <div id="unity-footer">
