--- a/pages/home.html
+++ b/pages/home.html
@@ -49,9 +49,9 @@
   <img class="img1" src="https://specials-images.forbesimg.com/imageserve/5f302109ffad89f9130e07db/960x0.jpg?cropX1=0&cropX2=4800&cropY1=243&cropY2=2943" alt="code" width="170" height="170">
   <p>I have made several small coding projects in the past, most of them just dumb little experiments. Here they are below.</p>
   <ul>
-    <li>Random Terrain Generator</li>
-    <li>Simple FPS Game</li>
-    <li>Account System Tutorial</li>
+    <li><a href="lukeiowa.github.io/generator.html">Random Terrain Generator</a></li>
+    <li><a href="lukeiowa.github.io/game.html">Simple FPS Game</li>
+    <li onclick="window.alert('Work in progress!')">Account System Tutorial</li>
   </ul>
 </div>
 <div class="clearfix">
