--- a/pages/home.html
+++ b/pages/home.html
@@ -46,21 +46,21 @@
 </div>
 <div class="clearfix">
   <a id="services"><h2>Services</h2></a>
-  <img class="img1" src="https://specials-images.forbesimg.com/imageserve/5f302109ffad89f9130e07db/960x0.jpg?cropX1=0&cropX2=4800&cropY1=243&cropY2=2943" alt="code" width="170" height="170">
+  <img class="img1" src="../Assets/Pic1.jpg" alt="mountains" width="170" height="170">
   <p>I have made several small coding projects in the past, most of them just dumb little experiments. Here they are below.</p>
   <ul>
-    <li><a href="lukeiowa.github.io/generator.html">Random Terrain Generator</a></li>
-    <li><a href="lukeiowa.github.io/game.html">Simple FPS Game</li>
+    <li><a href="../generator.html">Random Terrain Generator</a></li>
+    <li><a href="../game.html">Battle for the Dashlands!</li>
     <li onclick="window.alert('Work in progress!')">Account System Tutorial</li>
   </ul>
 </div>
 <div class="clearfix">
   <a id="making"><h2>How I made the website</h2></a>
-  <img class="img1" src="https://specials-images.forbesimg.com/imageserve/5f302109ffad89f9130e07db/960x0.jpg?cropX1=0&cropX2=4800&cropY1=243&cropY2=2943" alt="code" width="170" height="170">
-  <p>I've made this webpage the same way I've made them for my other clients: Github Pages. Github Pages is a free web-hosting service run by Github</br>
-     It is very powerful and free to use. The webpages themselves are made using a combination of HTML, CSS and JS. Most of the code I make is my own, </br>
-     but the more complication things I've looked for help online for on various sites(ex. W3Schools, StackOverflow, etc.). However, most of these snippets </br>
-     I modify myself to make my work more original.</p>
+  <img class="img1" src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera-course-photos.s3.amazonaws.com/83/e258e0532611e5a5072321239ff4d4/jhep-coursera-course4.png?auto=format%2Ccompress&dpr=1" alt="code" width="170" height="170">
+  <p>I've made this webpage the same way I've made them for my other clients: Github Pages. Github Pages is a free web-hosting service run by Github.
+     It's very simple and free to use. The webpages themselves are made using a combination of HTML, CSS and JS. Most of the code I make is my own,
+     but the more complication things I've looked for help online for on various sites(ex. W3Schools, StackOverflow, etc.). However, most of these snippets
+     I modify myself to make my work more original, and for it to fit whatever project I'm working on at the time.</p>
 </div>
 </div>
   </body>
