--- a/pages/home.html
+++ b/pages/home.html
@@ -50,7 +50,7 @@
   <p>I have made several small coding projects in the past, most of them just dumb little experiments. Here they are below.</p>
   <ul>
     <li><a href="../generator.html">Random Terrain Generator</a></li>
-    <li><a href="../game.html">Battle for the Dashlands!</li>
+    <li><a href="../pages/bfd.html">Battle for the Dashlands!</li>
     <li onclick="window.alert('Work in progress!')">Account System Tutorial</li>
   </ul>
 </div>
