--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="../CSS/game.css">
+    <script type="text/javascript" src="../JS/bfd.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
     <title>Battle for the Dashlands!</title>
     <style>
@@ -25,6 +26,11 @@
         <p>A simple FPS about saving the world!</p>
         <button>Play!</button>
       </div>
+    </div>
+    <div style="text-align: center;">
+      <h1>Battle For the Dashlands</h1>
+      <h2>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="www.sharpcoder.com">SharpCoder.com</a></h2>
+      <h3>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h3>
     </div>
   </body>
 </html>
