--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -24,7 +24,7 @@
       <div class="hero-text">
         <h1>Battle for the Dashlands!</h1>
         <p>A simple FPS about saving the world!</p>
-        <button>Play!</button>
+        <button onclick="redirect()">Play!</button>
       </div>
     </div>
     <div style="text-align: center;">
