--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -29,7 +29,7 @@
     </div>
     <div style="text-align: center;">
       <h1>Battle For the Dashlands</h1>
-      <h2>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="www.sharpcoder.com">SharpCoder.com</a></h2>
+      <h2>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></h2>
       <h3>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h3>
     </div>
   </body>
