--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -13,9 +13,9 @@
   <body>
     <div id="mySidenav" class="sidenav" style="z-layer: 3;">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#making">Making</a>
+      <a href="#game">The Game!</a>
+      <a href="#change">Changelog</a>
+      <a href="../pages/home.html"><b>Back Home</b></a>
     </div>
     <div class="navbar2">
       <span style="font-size:30px;cursor:pointer; color: white;" onclick="openNav()">&#9776; Navigation</span>
@@ -28,9 +28,21 @@
       </div>
     </div>
     <div style="text-align: center;">
-      <h1>Battle For the Dashlands</h1>
-      <h2>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></h2>
-      <h3>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h3>
+      <a id="game">
+      <h2>Description</h2>
+      </a>
+      <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
+      <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
+    </div>
+    
+    <button class="accordion">The Changelog</button>
+    <div class="panel">
+      <h3>Update 1.0.0</h3>
+        <ul>
+          <li>Made the game</li>
+          <li>Made the website</li>
+          <li>Working on basic mobile controls</li>
+       </ul>
     </div>
   </body>
 </html>
