--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -35,9 +35,8 @@
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
     
-    <button class="accordion">The Changelog</button>
-    <div class="panel">
-      <h3>Update 1.0.0</h3>
-    </div>
+<div class="content">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
   </body>
 </html>
