--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -34,7 +34,7 @@
       <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
-    
+<button type="button" class="collapsible">See the Changelog!</button>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
