--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../CSS/game.css">
+    <link rel="stylesheet" href="../CSS/twg.css">
     <script type="text/javascript" src="../JS/bfd.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
     <title>Battle for the Dashlands!</title>
@@ -13,7 +13,7 @@
   <body>
     <div id="mySidenav" class="sidenav" style="z-layer: 3;">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#game">The Game!</a>
+      <a href="#game">The Generator!</a>
       <a href="#change">Changelog</a>
       <a href="../pages/home.html"><b>Back Home</b></a>
     </div>
@@ -22,8 +22,8 @@
     </div>
     <div class="hero-image">
       <div class="hero-text">
-        <h1>Battle for the Dashlands!</h1>
-        <p>A simple FPS about saving the world!</p>
+        <h1>The World Generator!</h1>
+        <p>A simple WIP terrain generator for infinite fun!</p>
         <button onclick="redirect()">Play!</button>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
-<button type="button" class="collapsible">See the Changelog!</button>
+    <a id="change"><button type="button" class="collapsible">See the Changelog!</button></a>
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
