--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="../CSS/twg.css">
+    <link rel="stylesheet" href="../CSS/game.css">
     <script type="text/javascript" src="../JS/bfd.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
     <title>Battle for the Dashlands!</title>
@@ -22,8 +22,8 @@
     </div>
     <div class="hero-image">
       <div class="hero-text">
-        <h1>The World Generator!</h1>
-        <p>A simple WIP terrain generator for infinite fun!</p>
+        <h1>Battle for the Dashlands!</h1>
+        <p>A simple FPS Shooter!</p>
         <button onclick="redirect()">Play!</button>
       </div>
     </div>
