--- a/pages/home.html
+++ b/pages/home.html
@@ -49,7 +49,7 @@
   <img class="img1" src="../Assets/Pic1.jpg" alt="mountains" width="170" height="170">
   <p>I have made several small coding projects in the past, most of them just dumb little experiments. Here they are below.</p>
   <ul>
-    <li><a href="../generator.html">Random Terrain Generator</a></li>
+    <li><a href="../pages/twg.html">Random Terrain Generator</a></li>
     <li><a href="../pages/bfd.html">Battle for the Dashlands!</li>
     <li onclick="window.alert('Work in progress!')">Account System Tutorial</li>
   </ul>
