--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -34,13 +34,19 @@
       <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
-    <button onclick="showUpdates()">Try it</button>
+    <div style="text-align: center">
+    <button onclick="showUpdates()">View the Changelog!</button>
+    </div>
 
 <div id="changelog">
-This is my DIV element.
+  <h2>Changelog!</h2>
+  <h3>Update 1.0.0</h3>
+  <ul>
+    <li>Added the game</li>
+    <li>Updating the game</li>
+  </ul>
 </div>
 
-<p><b>Note:</b> The element will not take up any space when the display property set to "none".</p>
 
 <script>
 function showUpdates() {
