--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -38,7 +38,7 @@
     <button onclick="showUpdates()">View the Changelog!</button>
     </div>
 
-<div id="changelog">
+<div id="changelog" hidden>
   <h2>Changelog!</h2>
   <h3>Update 1.0.0</h3>
   <ul>
