--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -41,10 +41,19 @@
 <div id="changelog" hidden>
   <h2>Changelog!</h2>
   <h3>Update 1.0.0</h3>
+  <div style="text-align: center;">
   <ul>
     <li>Added the game</li>
     <li>Updating the game</li>
   </ul>
+  </div>
+  <h3>Update 1.0.1</h3>
+  <div style="text-align: center;">
+    <ul>
+    <li>Buffed the difficulty</li>
+    <li>Made the game bigger</li>
+  </ul>
+  </div>
 </div>
 
 
