--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -41,19 +41,14 @@
 <div id="changelog" hidden>
   <h2>Changelog!</h2>
   <h3>Update 1.0.0</h3>
-  <div style="text-align: center;">
-  <ul>
-    <li>Added the game</li>
-    <li>Updating the game</li>
-  </ul>
-  </div>
+  <p>Made the game</p>
   <h3>Update 1.0.1</h3>
-  <div style="text-align: center;">
-    <ul>
-    <li>Buffed the difficulty</li>
-    <li>Made the game bigger</li>
-  </ul>
-  </div>
+  <p>Game currently down while implementing new features, such as:</p>
+  <h5>More enemies / wave</h5>
+  <h5>More terrain to play around with</h5>
+  <h5>Trees & grass</h5>
+  <h5>Changed time of day to sunset</h5>
+  <h5>Menu Screen (?)</h5>
 </div>
 
 
