--- a/pages/twg.html
+++ b/pages/twg.html
@@ -42,7 +42,7 @@
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
     <<button onclick="showMD()">Show the Map Generator</button>
-    <div id="code1">
+    <div id="code1" hidden>
       <pre>
         <code>
         
@@ -75,7 +75,7 @@ public class MapDisplay : MonoBehaviour
       </pre>
     </div>
   <button onclick="showET">Show the Endless Terrain</button>
-  <div id="codeTwo">
+  <div id="codeTwo" hidden>
     <pre>
       <code>
       using System.Collections;
