--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -43,12 +43,14 @@
   <h3>Update 1.0.0</h3>
   <p>Made the game</p>
   <h3>Update 1.0.1</h3>
-  <p>Game currently down while implementing new features, such as:</p>
-  <h5>More enemies / wave</h5>
-  <h5>More terrain to play around with</h5>
-  <h5>Trees & grass</h5>
-  <h5>Changed time of day to sunset</h5>
-  <h5>Menu Screen (?)</h5>
+  <p>Put the game back online</p>
+  <p>Enabled the game to be larger</p>
+  <p>Buffed the game (10 / wave now)</p>
+  <p>Added a barrier</p>
+  <h3>Future Work!</h3>
+  <p>Menu Screen</p>
+  <p>More area to explore!</p>
+  <p>Skybox?</p>
 </div>
 
 
