--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -64,5 +64,28 @@ function showUpdates() {
   }
 }
 </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="https://www.gstatic.com/firebasejs/8.6.2/firebase-analytics.js"></script>
+
+<script>
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  var firebaseConfig = {
+    apiKey: "AIzaSyC4nJc3qx-ey7qXNK1UQjOwxoRBQu81L0o",
+    authDomain: "gdaddonstorelike.firebaseapp.com",
+    projectId: "gdaddonstorelike",
+    storageBucket: "gdaddonstorelike.appspot.com",
+    messagingSenderId: "800202302277",
+    appId: "1:800202302277:web:eb2755c60a1ca44dd7142c",
+    measurementId: "G-17NX7DS21Y"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  firebase.analytics();
+</script>
   </body>
 </html>
