--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -35,6 +35,12 @@
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
     <div style="text-align: center">
+      <h3>NOTE</h3>
+      <p>Mobile controls are now a work in progress!</p>
+      <h5>To play the beta, click below!</h5>
+      <button onclick="beta()">Play the beta!</button>
+      </br>
+    </br>
     <button onclick="showUpdates()">View the Changelog!</button>
     </div>
 
