--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -41,6 +41,25 @@
       <button onclick="beta()">Play the beta!</button>
       </br>
     </br>
+  </br>
+<h2>Submit a record!</h2>
+</br>
+<a href="https://forms.gle/LgBMcNK2x3E9tYbx8">Submit</a>
+</br>
+<button onclick="showLeaderboard()">View the leaderboard!</button>
+<div id="leaderboard" hidden>
+  <table>
+    <tr>
+      <th>Player</th>
+      <th>Wave Number</th>
+    </tr>
+    <tr>
+      <td>Fc500</td>
+      <td>Wave 12</td>
+    </tr>
+  </table>
+    
+</div>
     <button onclick="showUpdates()">View the Changelog!</button>
     </div>
 
@@ -67,6 +86,15 @@ function showUpdates() {
     x.style.display = "block";
   } else {
     x.style.display = "none";
+  }
+}
+
+function showLeaderboard() {
+  var y = document.getElementById("leaderboard");
+  if (y.style.display === "none") {
+    y.style.display = "block";
+  } else {
+    y.style.display = "none";
   }
 }
 </script>
