--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="../CSS/game.css">
+    <link href='https://fonts.googleapis.com/css?family=Russo One' rel='stylesheet'>
     <script type="text/javascript" src="../JS/bfd.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Baloo 2' rel='stylesheet'>
     <title>Battle for the Dashlands!</title>
@@ -34,6 +35,9 @@
       <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
+    <span class="material-icons-outlined">menu_book</span><p>View the wiki at <a href="https://github.com/lukeiowa/lukeiowa.github.io/wiki">my Github repo!</a></p>
+  <span class="material-icons-outlined">forum</span><p>View the fourms at <a href="https://github.com/lukeiowa/lukeiowa.github.io/discussions">my Github repo!</a></p>
+    
     <div style="text-align: center">
       <h3>NOTE</h3>
       <p>Mobile controls are now a work in progress!</p>
