--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -37,12 +37,14 @@
     </div>
     <table>
 <tr>
-  <td><span class="material-icons-outlined">menu_book</span></td>
+  <td><span class="material-icons">menu_book</span></td>
     <td><p>View the wiki at <a href="https://github.com/lukeiowa/lukeiowa.github.io/wiki">my Github repo!</a></p></td>
       </tr>
 <tr>
-  <td><span class="material-icons-outlined">forum</span></td>
+  <td><span class="material-icons">forum</span></td>
     <td><p>View the fourms at <a href="https://github.com/lukeiowa/lukeiowa.github.io/discussions">my Github repo!</a></p></td>
+      </tr>
+    </table>
     
     <div style="text-align: center">
       <h3>NOTE</h3>
