--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -35,7 +35,8 @@
       <p>Battle for the Dashlands is a simple FPS (or First Person Shooter) game, built using a tutorial from <a href="https://sharpcoderblog.com/">Sharpcoder.com</a></p>
       <h5>While this was made using a tutorial, I did expand upon it, and plan on adding many more features in the future!</h5>
     </div>
-    <table>
+    <table style="margin-left: auto;
+  margin-right: auto;">
 <tr>
   <td><span class="material-icons">menu_book</span></td>
     <td><p>View the wiki at <a href="https://github.com/lukeiowa/lukeiowa.github.io/wiki">my Github repo!</a></p></td>
@@ -53,6 +54,8 @@
       <button onclick="beta()">Play the beta!</button>
       </br>
     </br>
+  <h1>DOWNLOADS</h1>
+  <h3><a href="../Downloads/Test lol.exe" download>Windows</a></h3>
   </br>
 <h2>Submit a record!</h2>
 </br>
