--- a/pages/bfd.html
+++ b/pages/bfd.html
@@ -87,11 +87,12 @@
   <p>Put the game back online</p>
   <p>Enabled the game to be larger</p>
   <p>Buffed the game (10 / wave now)</p>
-  <p>Added a barrier</p>
-  <h3>Future Work!</h3>
-  <p>Menu Screen</p>
-  <p>More area to explore!</p>
-  <p>Skybox?</p>
+  <h3>Update 1.0.2</h3>
+  <p>Added a menu screen!</p>
+  <p>Added a gamemodes screen!</p>
+  <p>Started to implement mobile controls!</p>
+  <p>Added a basic multiplayer mode!</p>
+  <p>Added a basic downloadable version for Windows!</p>
 </div>
 
 
