--- a/beta.html
+++ b/beta.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Test lol</title>
+    <title>Battle for the Dashlands Beta!</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <style>
+      html {
+      background-color: black;
+      }
+    </style>
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
